fix overflow on ff

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -794,7 +794,7 @@ input, textarea {
     vertical-align: bottom;
 }
 .message-new-input {
-    width: 400px;
+    width: 380px;
 }
 .message-new-media-btn {
     cursor: pointer;
